Closed Bug 1560183 Opened 5 years ago Closed 5 years ago

Re-Enable RDD Process

Categories

(Firefox Build System :: General: Unsupported Platforms, defect)

defect
Not set
normal

Tracking

(firefox-esr60 unaffected, firefox-esr6869+ fixed, firefox68- wontfix, firefox69 wontfix, firefox70 fixed)

RESOLVED FIXED
mozilla70
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 69+ fixed
firefox68 - wontfix
firefox69 --- wontfix
firefox70 --- fixed

People

(Reporter: tjr, Assigned: tjr)

References

Details

Attachments

(1 file)

Once Bug 1557844 is uplifted; I can close Bug 1553721 and then use this bug to revert Bug 1553726

Bug 1557844 fixed (inadvertently) the failures we were getting with RDD

Putting this up now since Bug 1557844 is fixed in 69 and -central (70). We can land this in central today and uplift to 68 once Bug 1553721 is uplifted there.

We could in theory uplift this to 69 just to be consistent; but no one will use the 69-based MinGW build so it is not required.

Keywords: checkin-needed

Pushed by nnethercote@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b281af2f2eae
Re-enable the RDD Process for MinGW builds r=jya

Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70

[Tracking Requested - why for this release]: We disabled the RDD process for MinGW on 68 because it was crashing. We identified the source of the crash and backported the fix in Bug 1557844. Now we can re-enable it.

Comment on attachment 9078581 [details]
Bug 1560183 - Re-enable the RDD Process for MinGW builds r?jya

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: We disabled the RDD process for MinGW on 68 because it was crashing. We identified the source of the crash and backported the fix in Bug 1557844. Now we can re-enable it.
  • User impact if declined: Tor Browser will need to backport the patch and when we start running tests on esr68 we'll be running them in an unsupported configuration.
  • Fix Landed on Version: 70.0a1
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Only affects MinGW
  • String or UUID changes made by this patch:
Attachment #9078581 - Flags: approval-mozilla-esr68?

Since the status are different for nightly and release, what's the status for beta?
For more information, please visit auto_nag documentation.

While 69 is affected; I don't need an uplift there as no one will use a mingw build off 69 and I won't enable tests there.

Comment on attachment 9078581 [details]
Bug 1560183 - Re-enable the RDD Process for MinGW builds r?jya

Re-enables the RDD process for MinGW builds. NPOTB for official Firefox releases. Approved for 68.1esr.

Attachment #9078581 - Flags: approval-mozilla-esr68? → approval-mozilla-esr68+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: