Bug 1560183 - Re-enable the RDD Process for MinGW builds r=jya

Bug 1557844 fixed (inadvertently) the failures we were getting with RDD

Differential Revision: https://phabricator.services.mozilla.com/D38263

--HG--
extra : moz-landing-system : lando